--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">  
-    <title>PollGames | Zimbabwe</title>
+    <title>Polling Game | Zimbabwe</title>
     <script src="https://npmcdn.com/vue/dist/vue.js"></script>
     <link rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
@@ -24,6 +24,7 @@
 </head>
 <body>
 <header>2018 Zimbabwe Elections Game</header>
+
 <div class="advert">
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
              <!-- pollsGame -->
@@ -35,9 +36,15 @@
         (adsbygoogle = window.adsbygoogle || []).push({});
         </script>
 </div>
+<div class="skyscrappernews">
+  
+</div>
 <h2 class="cast animated bounceIn">Cast Your Vote Now!</h2>
 
 <div id="wrapper">
+
+  
+
 <div id="app">
     <section class="row">
         <div class="small-6 columns">
@@ -103,6 +110,7 @@
     </div>
     
 </div>
+<div></div>
 <footer class="advert2">
             <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
             <!-- pollsGameFooter -->
@@ -115,6 +123,20 @@
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </footer>
+<div class="advert2">
+  <script type="text/javascript">
+  ( function() {
+    if (window.CHITIKA === undefined) { window.CHITIKA = { 'units' : [] }; };
+    var unit = {"calltype":"async[2]","publisher":"ChrisM1","width":728,"height":90,"sid":"Chitika Default"};
+    var placement_id = window.CHITIKA.units.length;
+    window.CHITIKA.units.push(unit);
+    document.write('<div id="chitikaAdBlock-' + placement_id + '"></div>');
+}());
+</script>
+<script type="text/javascript" src="//cdn.chitika.net/getads.js" async></script>
+
+  
+</div>
 <script src="min.js"></script>
 </body>
 </html>
